# frontend

./: .gitignore  README.md  package.json  pyproject.toml
.github/: labeler.yml
.github/workflows/: ci.yaml  nightly.yaml  release.yaml  stale.yml
src/cast/: sender_messages.ts
src/components/: ha-sidebar.ts  ha-stt-picker.ts  ha-svg-vioneta.ts  ha-theme-picker.ts  ha-tts-picker.ts
src/data/: automation_i18n.ts  hardware.ts  logbook.ts  media-player.ts  onboarding.ts  update.ts
src/entrypoints/: service-worker.ts
src/fake_data/: demo_services.ts  provide_hass.ts
src/html/: authorize.html.template  index.html.template  onboarding.html.template
src/layouts/: ha-init-page.ts  home-assistant.ts
src/onboarding/: ha-onboarding.ts
src/resources/: ha-style.ts  home-assistant-logo-svg.ts  styles-data.ts
src/state/: disconnect-toast-mixin.ts  panel-title-mixin.ts  quick-bar-mixin.ts
src/translations/: en.json
translations/: artifact.json  token.json
translations/backend/: af.json  ar.json  bg.json  bn.json  bs.json  ca.json  cs.json  cy.json  da.json  de.json  el.json  en-GB.json  en.json  es-419.json  es.json  et.json  eu.json  fa.json  fi.json  fr.json  fy.json  gl.json  gsw.json  he.json  hi.json  hr.json  hu.json  hy.json  id.json  is.json  it.json  ja.json  ko.json  lb.json  lt.json  lv.json  ml.json  nb.json  nl.json  nn.json  (+18 more)
translations/frontend/: af.json  ar.json  bg.json  bn.json  bs.json  ca.json  cs.json  cy.json  da.json  de.json  el.json  en-GB.json  en.json  eo.json  es-419.json  es.json  et.json  eu.json  fa.json  fi.json  fr.json  (+42 more)
(+23 files in other folders)
