[build-system]
requires = ["setuptools~=68.0", "wheel~=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name         = "vioneta-agro-frontend"
version      = "20240809.0"
license      = {text = "Apache-2.0"}
description  = "The Vioneta Agro frontend"
readme       = "README.md"
authors      = [
    {name = "The Vioneta Agro Authors", email = "admin@vioneta.com"}
]
requires-python = ">=3.11.0"

[project.urls]
"Homepage" = "https://github.com/Vioneta/frontend"

[tool.setuptools]
platforms = ["any"]
zip-safe  = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["hass_frontend*"]
